# FSynth

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.json  cshell.c  errors.c  fsynth.h  hull.c  list.c  list.h  logging.c  logging.h  main.c  prompt.c  samples.c  sequencer.c  wavefmt.c
src/: cshell.c  errors.c  fs_config_in.h  fsynth.h  hull.c  list.c  list.h  logging.c  logging.h  main.c  prompt.c  samples.c  sequencer.c  wavefmt.c
